// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`absolute path: /path/to/project1/src/App.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"en\\": {
    \\"title\\": \\"Application\\"
  },
  \\"ja\\": {
    \\"title\\": \\"アプリケーション\\"
  }
}
</i18n>
  "
`;

exports[`absolute path: /path/to/project1/src/components/Modal.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"Cancel\\"
}
</i18n>
  
  <i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>
  "
`;

exports[`absolute path: /path/to/project1/src/components/nest/RankingTable.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"headers\\": {
    \\"rank\\": \\"Rank\\",
    \\"name\\": \\"Name\\",
    \\"score\\": \\"Score\\"
  }
}
</i18n>
  

<i18n locale=\\"ja\\">
{
  \\"headers\\": {
    \\"rank\\": \\"ランク\\",
    \\"name\\": \\"名前\\",
    \\"score\\": \\"スコア\\"
  }
}
</i18n>"
`;

exports[`absolute path: /path/to/project1/src/pages/Login.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"ja\\": {
    \\"id\\": \\"ユーザーID\\",
    \\"passowrd\\": \\"パスワード\\",
    \\"confirm\\": \\"パスワードの確認入力\\",
    \\"button\\": \\"ログイン\\"
  }
}
</i18n>
  

<i18n locale=\\"en\\">
{
  \\"id\\": \\"User ID\\",
  \\"password\\": \\"Password\\",
  \\"confirm\\": \\"Confirm Password\\",
  \\"button\\": \\"Login\\"
}
</i18n>"
`;

exports[`bundle option 1`] = `
Object {
  "./test/fixtures/packages/package1/locales/en/common.json": "{
  \\"package1\\": {
    \\"common\\": {
      \\"navigation\\": {
        \\"title\\": \\"title\\"
      }
    }
  }
}",
  "./test/fixtures/packages/package1/locales/ja/common.json": "{
  \\"package1\\": {
    \\"common\\": {
      \\"navigation\\": {
        \\"title\\": \\"タイトル\\"
      }
    }
  }
}",
  "./test/fixtures/packages/package2/locales/en/profile.json": "{
  \\"package2\\": {
    \\"profile\\": {
      \\"display_name\\": \\"Display Name\\",
      \\"email\\": \\"E-Mail\\"
    }
  }
}",
  "./test/fixtures/packages/package2/locales/ja/profile.json": "{
  \\"package2\\": {
    \\"profile\\": {}
  }
}",
  "/path/to/project1/src/App.vue": "
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"en\\": {
    \\"title\\": \\"Application\\"
  },
  \\"ja\\": {
    \\"title\\": \\"アプリケーション\\"
  }
}
</i18n>
  ",
  "/path/to/project1/src/components/Modal.vue": "
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"Cancel\\"
}
</i18n>
  
  <i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>
  ",
  "/path/to/project1/src/components/nest/RankingTable.vue": "
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"headers\\": {
    \\"rank\\": \\"Rank\\",
    \\"name\\": \\"Name\\",
    \\"score\\": \\"Score\\"
  }
}
</i18n>
  

<i18n locale=\\"ja\\">
{
  \\"headers\\": {
    \\"rank\\": \\"ランク\\",
    \\"name\\": \\"名前\\",
    \\"score\\": \\"スコア\\"
  }
}
</i18n>",
  "/path/to/project1/src/pages/Login.vue": "
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"ja\\": {
    \\"id\\": \\"ユーザーID\\",
    \\"passowrd\\": \\"パスワード\\",
    \\"confirm\\": \\"パスワードの確認入力\\",
    \\"button\\": \\"ログイン\\"
  }
}
</i18n>
  

<i18n locale=\\"en\\">
{
  \\"id\\": \\"User ID\\",
  \\"password\\": \\"Password\\",
  \\"confirm\\": \\"Confirm Password\\",
  \\"button\\": \\"Login\\"
}
</i18n>",
}
`;

exports[`ignore option: /path/to/project1/src/App.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"en\\": {
    \\"title\\": \\"Application\\"
  },
  \\"ja\\": {
    \\"title\\": \\"アプリケーション\\"
  }
}
</i18n>
  "
`;

exports[`ignore option: /path/to/project1/src/components/Modal.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"Cancel\\"
}
</i18n>
  
  <i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>
  "
`;

exports[`ignore option: /path/to/project1/src/components/nest/RankingTable.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"headers\\": {
    \\"rank\\": \\"Rank\\",
    \\"name\\": \\"Name\\",
    \\"score\\": \\"Score\\"
  }
}
</i18n>
  

<i18n locale=\\"ja\\">
{
  \\"headers\\": {
    \\"rank\\": \\"ランク\\",
    \\"name\\": \\"名前\\",
    \\"score\\": \\"スコア\\"
  }
}
</i18n>"
`;

exports[`match option: /path/to/project1/src/App.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"en\\": {
    \\"title\\": \\"Application\\"
  },
  \\"ja\\": {
    \\"title\\": \\"アプリケーション\\"
  }
}
</i18n>
  "
`;

exports[`match option: /path/to/project1/src/components/Modal.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"Cancel\\"
}
</i18n>
  
  <i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>
  "
`;

exports[`match option: /path/to/project1/src/components/nest/RankingTable.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"headers\\": {
    \\"rank\\": \\"Rank\\",
    \\"name\\": \\"Name\\",
    \\"score\\": \\"Score\\"
  }
}
</i18n>
  

<i18n locale=\\"ja\\">
{
  \\"headers\\": {
    \\"rank\\": \\"ランク\\",
    \\"name\\": \\"名前\\",
    \\"score\\": \\"スコア\\"
  }
}
</i18n>"
`;

exports[`match option: /path/to/project1/src/pages/Login.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"ja\\": {
    \\"id\\": \\"ユーザーID\\",
    \\"passowrd\\": \\"パスワード\\",
    \\"confirm\\": \\"パスワードの確認入力\\",
    \\"button\\": \\"ログイン\\"
  }
}
</i18n>
  

<i18n locale=\\"en\\">
{
  \\"id\\": \\"User ID\\",
  \\"password\\": \\"Password\\",
  \\"confirm\\": \\"Confirm Password\\",
  \\"button\\": \\"Login\\"
}
</i18n>"
`;

exports[`relative path: /path/to/project1/src/App.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"en\\": {
    \\"title\\": \\"Application\\"
  },
  \\"ja\\": {
    \\"title\\": \\"アプリケーション\\"
  }
}
</i18n>
  "
`;

exports[`relative path: /path/to/project1/src/components/Modal.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"Cancel\\"
}
</i18n>
  
  <i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>
  "
`;

exports[`relative path: /path/to/project1/src/components/nest/RankingTable.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n locale=\\"en\\">
{
  \\"headers\\": {
    \\"rank\\": \\"Rank\\",
    \\"name\\": \\"Name\\",
    \\"score\\": \\"Score\\"
  }
}
</i18n>
  

<i18n locale=\\"ja\\">
{
  \\"headers\\": {
    \\"rank\\": \\"ランク\\",
    \\"name\\": \\"名前\\",
    \\"score\\": \\"スコア\\"
  }
}
</i18n>"
`;

exports[`relative path: /path/to/project1/src/pages/Login.vue 1`] = `
"
  <template>
    <p>template</p>
  </template>
  
  <script>
  export default {}
  </script>

  <i18n>
{
  \\"ja\\": {
    \\"id\\": \\"ユーザーID\\",
    \\"passowrd\\": \\"パスワード\\",
    \\"confirm\\": \\"パスワードの確認入力\\",
    \\"button\\": \\"ログイン\\"
  }
}
</i18n>
  

<i18n locale=\\"en\\">
{
  \\"id\\": \\"User ID\\",
  \\"password\\": \\"Password\\",
  \\"confirm\\": \\"Confirm Password\\",
  \\"button\\": \\"Login\\"
}
</i18n>"
`;
